// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly Calc component 1`] = `
<div
  className="calc"
>
  <h1>
    Lets do some math!
  </h1>
  <main>
    <div
      id="screen"
    >
      <span>
         
         
        
      </span>
    </div>
    <div>
      <div
        className="rows"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
      </div>
      <div
        className="rows"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          x
        </button>
      </div>
      <div
        className="rows"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          -
        </button>
      </div>
      <div
        className="rows"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
      <div
        className="rows"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          .
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </main>
</div>
`;

exports[`render correctly Display component 1`] = `
<div
  id="screen"
>
  <span>
     
         
        
  </span>
</div>
`;

exports[`render correctly Header component 1`] = `
<div
  className="container"
>
  <h1>
    Math Magicians
  </h1>
  <ul>
    <li>
      <span>
        <a
          aria-current="page"
          className="active"
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </span>
    </li>
    <li>
      <span>
        <a
          className=""
          href="/calculator"
          onClick={[Function]}
        >
          Calculator
        </a>
      </span>
    </li>
    <li>
      <span>
        <a
          className=""
          href="/quote"
          onClick={[Function]}
        >
          Quote
        </a>
      </span>
    </li>
  </ul>
</div>
`;

exports[`render correctly Home component 1`] = `
<div
  className="home"
>
  <h2>
    Welcome to our page!
  </h2>
  <div>
    <p>
      Lorem ipsum dolor sit amet, at habemus suscipit comprehensam usu. Deserunt scribentur id eam, ex persecuti neglegentur mea, his tantas urbanitas id. Usu oratio antiopam temporibus eu. Sed an legimus repudiare, probo civibus his ex.Everti recteque et sea, no cetero menandri mei. Ut vel summo omittantur. At inciderint temporibus has. Facilis salutatus complectitur ex eam, ex aeque indoctum pro, nisl quas nullam mei an. Duo te sensibus mandamus, ei his vidit populo.
    </p>
    <p>
      Ad vim iisque epicuri evertitur. Ne quo doctus detracto, eam apeirian expetenda ex, cum dicunt intellegebat ut. Duo no signiferumque mediocritatem, id legendos tincidunt pro, dicant senserit usu no. Ut oratio cotidieque mel. Cum an zril impedit repudiare, id per eius delenit perpetua. Illud mnesarchum has ut, eu vis quem voluptatum deterruisset, eos erant expetenda ne. Dicit option fabellas mea id. Ea agam regione quo, soluta molestiae posidonium no nam. Eu ius tantas appareat. Ex cum aliquip euismod legendos, feugiat consulatu nec ea. Et summo evertitur est, sed ne natum aperiam definiebas, dolorem corrumpit ius id. Ad ius detracto philosophia.
    </p>
  </div>
</div>
`;

exports[`render correctly Quote component 1`] = `
<div
  className="quote"
>
  <h3>
    <span>
      Mathematics is not about numbers, equations, computations,
    </span>
    <br />
    or algorithms: it is about understanding. -- William Paul Thurston
  </h3>
</div>
`;

exports[`render correctly Rows component 1`] = `
Array [
  <button
    onClick={[Function]}
    type="button"
  >
    1
  </button>,
  <button
    onClick={[Function]}
    type="button"
  >
    2
  </button>,
  <button
    onClick={[Function]}
    type="button"
  >
    3
  </button>,
]
`;
